--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "A RESTful API built with Node & Expres",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test.js"
+    "test": "NODE_ENV=test mocha test.js"
   },
   "author": "Irvin Rangel",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "hiredis": "^0.5.0",
+    "redis": "^2.7.1"
   },
   "devDependencies": {
     "mocha": "^3.4.2",
